# blog-poc

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
blog_poc/: asgi.py  settings.py  urls.py  wsgi.py
user/: authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_bloguser_options_alter_bloguser_table.py
